k8s/realworld-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: realworld-app
---
apiVersion: v1
kind: Service
metadata:
  name: realworld-app
  namespace: realworld-app
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: realworld-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realworld-app
  namespace: realworld-app
spec:
  selector:
    matchLabels:
      app: realworld-app
  replicas: 2
  template:
    metadata:
      labels:
        app: realworld-app
    spec:
      containers:
      - name: realworld-app
        image: mareimorsy/realworld-app:56
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
