k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realworld-app
  namespace: realworld-app
spec:
  ingressClassName: nginx
  rules:
  - host: "<your domain>"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: realworld-app
            port:
              number: 80
